webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-mysql
spec:
  selector:
    app: webook-live-mysql
  ports:
    - protocol: TCP
# 要访问的端口
      port: 3308
      targetPort: 3306
      nodePort: 30002
  type: NodePort
