webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-redis
spec:
  selector:
    app: webook-live-redis
  ports:
    - protocol: TCP
#      service 本身的
      port: 11479
#      Redis 默认端口
#      Pod 上暴露的端口
      targetPort: 6379
#      k8s 集群之外能访问的端口
      nodePort: 30003
  type: NodePort
