webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-live-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  要用 nginx
  ingressClassName: nginx
  rules:
#    host 是 live.webook.com 的时候，命中这个条
    - host: live.webook.com
      http:
        paths:
#          请求路径的前缀是 / 的时候
#          将流量转发过去后面的 webook-live 服务上
#          端口是 81
          - backend:
              service:
                name: webook-live
                port:
                  number: 81
            pathType: Prefix
            path: /
